--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "engines": {
+    "npm": "10",
+    "node": "22"
+  },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
